Add Header component

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -127,4 +127,10 @@
     .navbar .close__btn {
         display: flex;
     }
+
+    .navbar .logo {
+        /* max-height: 20px; */
+        max-width: 80px;
+        height: 100%;
+    }
 }
