--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,20 +23,44 @@ padding-top: 100px;
 }
 
 #header .description {
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 #header .social__handles__container {
-    margin-top: 10px;
+    margin-top: 40px;
+    justify-content: center;
+
 }
 
 #header .profile__photo {
-
     object-fit: contain;
     filter: grayscale(100%);
 }
 
+.title__heading {
+    font-size: 3.7rem;
+    line-height: 6rem;
+    font-family: roboto, serif;
+    font-weight: 600;
+    padding: 30px;
+    max-width: 700px;
+    margin-left: 20px;
+}
+
+.title__heading span {
+    color: #61DBFB;
+}
 /* Responsiveness */
+
+@media(max-width:1100px) {
+    .title__heading {
+        text-align: center;
+        font-size: 3.3rem;
+        line-height: 4rem;
+        margin-left: 0px;
+        padding: 30px 0px;
+    }
+}
 
 @media (max-width: 768px) {
     #header .grid,
@@ -52,47 +76,15 @@ padding-top: 100px;
         text-align: center;
     }
 
-    #header .social__handles__container {
-        justify-content: center;
-    }
-
     #header .code__container {
         font-size: 13px;
     }
 
-
-}
-
-
-
-
-
-
-
-
-
-
-
-.title__heading {
-    font-size: 3.7rem;
-    line-height: 6rem;
-    font-family: roboto, serif;
-    font-weight: 600;
-    padding: 30px;
-    max-width: 700px;
-    margin-left: 20px;
-}
-
-.title__heading span {
-    color: #61DBFB;
-}
-
-@media(max-width:900px) {
     .title__heading {
-        text-align: center;
-        font-size: 2.3rem;
+        font-size: 2.6rem;
         line-height: 4rem;
         margin-left: 0px;
         padding: 30px 0px;
     }
 }
+
