--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -31,13 +31,20 @@
     box-shadow: var(--card-primary-shadow);
 }
 
+#contact .contact__group .cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 #contact .title,
 #contact .title .shine {
     font-size: 2rem;
     font-weight: 900;
 }
 
-#contact form {
+#contact .form__container {
     padding: 40px;
     border-radius: var(--border-radius-3);
     background: var(--color-ui-2);
@@ -105,13 +112,24 @@ textarea:focus {
     transform: translateX(9rem);
 }
 
+.email__sent {
+    text-align: center;
+    padding: 100px 0;
+}
+
 /* Responsiveness */
 
 @media (max-width: 1000px) {
     #contact .pyramid__container {
-        width: 70%;
-        top: 30%;
+        width: 40%;
+        /* top: 30%; */
+        bottom: 50%;
         transform: translate(-50%, -10%);
+    }
+
+    #contact .email__sent {
+        padding: 80px 0;
+        font-size: 1.5rem;
     }
 }
 
@@ -128,6 +146,7 @@ textarea:focus {
     }
 
     #contact form {
-        padding: 20px;
+        padding: 0px;
     }
 }
+
