--- a/src/components/Experience/Experience-b.css
+++ b/src/components/Experience/Experience-b.css
@@ -1,17 +1,18 @@
-#about {
+#experience {
     position: relative;
-    margin-top: 60px;
+    margin: 60px 0;
 }
 
-#about .section__wrapper {
+#experience .section__wrapper {
     display: grid;
     grid-template-columns: 300px auto;
     gap: 40px;
     border-radius: 20px;
     position: relative;
+    
 }
 
-#about .hole {
+#experience .hole {
     position: absolute;
     top: -100px;
     left: 50%;
@@ -19,33 +20,33 @@
     z-index: 2;
 }
 
-#about .column {
+#experience .column {
     position: relative;
 }
 
-#about .right-column {
+#experience .right-column {
     padding: 100px 0;
 }
 
-#about .skill__title {
+#experience .skill__title {
     font-size: 20px;
     margin-bottom: 30px;
 }
 
-#about .skills__container {
+#experience .skills__container {
     max-width: 300px;
     margin: auto;
     position: relative;
     z-index: 2;
 }
 
-#about .skill__group {
+#experience .skill__group {
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
 }
 
-#about .skill {
+#experience .skill {
     width: 60px;
     height: 60px;
     border-radius: 10px;
@@ -59,21 +60,21 @@
     transition: transform 0.3s ease-in-out, scale 0.4s ease-in-out;
 }
 
-#about .skill:hover {
+#experience .skill:hover {
     z-index: 1;
     transform: rotate(0deg) scale(2);
 }
 
-#about .skill__logo {
+#experience .skill__logo {
     width: 40px;
     height: 40px;
 }
 
-#about .skill__logo img {
+#experience .skill__logo img {
     object-fit: contain;
 }
 
-#about .card__ui-item {
+#experience .card__ui-item {
     max-width: 200px;
     position: absolute;
     bottom: -50px;
@@ -83,16 +84,16 @@
 /* Responsiveness */
 
 @media (max-width: 768px) {
-    #about .section__wrapper {
+    #experience .section__wrapper {
         grid-template-columns: 100%;
         gap: 20px
     }
 
-    #about .left-column {
+    #experience .left-column {
         padding-top: 120px;
     }
 
-    #about .right-column {
+    #experience .right-column {
         padding: 0px;
         padding-bottom: 40px;
     }
