--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@ footer .nav__item {
 }
 
 footer .nav__item:hover {
-    color: var(--color-primary);
+    color: var(--color-muted);
 }
 
 footer .social__handles__container {
@@ -23,10 +23,6 @@ footer .social__handles__container {
 footer .base__logo .full__name {
     font-size: 7rem;
     font-weight: 900;
-    /* background: conic-gradient(#2f2585,#d8cce6,#f028fd,#2bdeac);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text; */
     text-align: center;
     opacity: 0.4;
 }
