--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,7 +23,18 @@ padding-top: 100px;
 }
 
 #header .description {
-    margin-top: 30px;
+    margin-top: 10px;
+}
+
+#header .about-me {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#header .about-me .title {
+    font-size: 2.5rem;
 }
 
 #header .social__handles__container {
@@ -78,6 +89,11 @@ padding-top: 100px;
 
     #header .code__container {
         font-size: 13px;
+    }
+
+    #header .about-me .title {
+        text-align: center;
+        font-size: 2rem;
     }
 
     .title__heading {
