--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ img {
   animation-fill-mode: forwards;
   -webkit-text-size-adjust: none;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 2rem;
   animation: shine 3s infinite linear;
 }
 
@@ -155,7 +155,7 @@ img {
 }
 
 .shine {
-  font-size: 2em;
+  font-size: 3em;
   font-weight: 900;
   color: rgba(255, 255, 255, 0.3);
   background-image: linear-gradient(
@@ -181,7 +181,7 @@ img {
     background-position: top left;
   }
   100% {
-    background-position: 100%;
+    background-position: 140%;
   }
 }
 
