--- a/src/ui/SocialHandles/SocialHandles.css
+++ b/src/ui/SocialHandles/SocialHandles.css
@@ -28,6 +28,12 @@
     transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
+.social__handles__container .logo {
+    width: 35px;
+    height: 35px;
+}
+
+
 .social__handles__container .tooltip::before {
     position: absolute;
     content: "";
