--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -73,10 +73,17 @@
         justify-content: center;
     }
 
-    
-
     #experience .experience__group .experience__container {
         text-align: center;
     }
+}
 
+@media (max-width: 768px) {
+    #experience .section__wrapper {
+        padding: 80px 20px;
+    }
+
+    #experience {
+        margin-top: 100px;
+    }
 }
